Support SVG icon for CollapsableControls & fixed logo image

--- a/src/mol-plugin-ui/skin/base/components/controls-base.scss
+++ b/src/mol-plugin-ui/skin/base/components/controls-base.scss
@@ -107,14 +107,14 @@
 }
 
 .msp-btn-block {
-    .msp-material-icon {
+    > .msp-material-icon {
         margin-left: 0;
         margin-right: .4em;
     }
 }
 
 .msp-btn-childless {
-    .msp-material-icon {
+    > .msp-material-icon {
         margin-left: 0;
         margin-right: 0;
     }
