--- a/src/mol-plugin-ui/skin/base/components/transformer.scss
+++ b/src/mol-plugin-ui/skin/base/components/transformer.scss
@@ -89,7 +89,7 @@
     
     > button {
         > span:first-child {
-            margin-right: 8px;
+            margin-right: 10px;
         }
     }
 
@@ -99,19 +99,25 @@
 }
 
 .msp-transform-header-brand {
-    padding-left: 42px;
+    // padding-left: 42px;
     margin-bottom: -1px;
-    > div {
-        position: absolute;
-        height: 32px;
-        line-height: 32px;
-        width: 32px;
-        top: 0;
-        left: 0;
-        text-align: center;
-        color: #eceff3;
-        font-size: 85%;
+    svg {
+        fill: $font-color;
+        stroke: $font-color;
     }
+    // > div {
+    //     position: absolute;
+    //     height: 32px;
+    //     line-height: 32px;
+    //     width: 32px;
+    //     top: 0;
+    //     left: 0;
+    //     text-align: center;
+    //     color: #eceff3;
+    //     fill: #eceff3;
+    //     stroke: #eceff3;
+    //     font-size: 85%;
+    // }
 }
 
 .msp-transform-default-params {
